--- a/src/app/components/find-flights/find-flights.component.html
+++ b/src/app/components/find-flights/find-flights.component.html
@@ -1,1 +1,21 @@
-<p>find-flights works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Find Flights</title>
+</head>
+
+<body>
+    <h2>Find Flights</h2>
+    <form #findFlightsForm="ngForm" (ngSubmit)="onSubmit()">
+        Departure City: <input type="text" name="departure_city" id="departure_city" [(ngModel)]="criteria.departure_city" /> Arrival City: <input type="text" name="arrival_city" id="arrival_city" [(ngModel)]="criteria.arrival_city" /> Departure Date:
+        <input type="text" name="departure_date" id="departure_date" [(ngModel)]="criteria.departure_date" />
+        <input type="submit" value="Search" />
+    </form>
+</body>
+
+</html>
+<router-outlet></router-outlet>
