--- a/src/app/components/display-flights/display-flights.component.html
+++ b/src/app/components/display-flights/display-flights.component.html
@@ -1,1 +1,37 @@
-<p>display-flights works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flights</title>
+</head>
+
+<body>
+    <h2>Flights</h2>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Airlines</th>
+                <th>Departure City</th>
+                <th>Arrival City</th>
+                <th>Departure Date</th>
+                <th>Departure Time</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let flight of data">
+                <td>{{flight.operating_airlines}}</td>
+                <td>{{flight.departure_city}}</td>
+                <td>{{flight.arrival_city}}</td>
+                <td>{{flight.departure_date}}</td>
+                <td>{{flight.estimated_departure_time}}</td>
+                <td><a (click)='onSelect(flight.id)'>Select</a></td>
+            </tr>
+        </tbody>
+    </table>
+</body>
+
+</html>
