created confirm reservation module

--- a/src/app/components/confirm-reservation/confirm-reservation.component.html
+++ b/src/app/components/confirm-reservation/confirm-reservation.component.html
@@ -1,1 +1,16 @@
-<p>confirm-reservation works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Confirm Reservation</title>
+</head>
+
+<body>
+    <h2>Confirm Reservation</h2>
+    <p><strong>Your flight reservation is complete. The confirmation code is {{reservation_id}}</strong></p>
+</body>
+
+</html>
